styles/global.less
@import (reference) './variables.less';
@import (reference) './variables-css.less';
@import (reference) './mixins.less';
@import (reference) './fonts.less';

html,
body {
  width: 100%;
  .default-text();
  @media @desktop {
    height: 100%;
  }
  a {
    color: @secondary-color;
  }
}

#__next {
  width: 100%;
  background-image: var(--body-background-image);
  transition: background 0.5s;
  @media @desktop {
    min-height: 100%;
  }
}

.main-container {
  width: 100%;
  max-width: @container-action-width;
  margin: 0;
  padding: 0 @default-section-padding;
  @media @desktop {
    margin: 0 auto;
  }
}

.container {
  width: 100%;
  max-width: @container-width;
  margin: 0 auto;
  padding: 0 @default-section-padding;
}

.container-max {
  width: 100%;
  max-width: @container-max-width;
  margin: 0 auto;
  padding: 0 @default-section-padding;
}

.hidden {
  &.md {
    @media (min-width: @screen-md) {
      display: none;
    }
  }
  &.md-max {
    @media (max-width: @screen-md-max) {
      display: none;
    }
  }
}

// Buttons
.ant-btn-xl.ant-btn {
  .xl-button();
}

.ant-btn {
  &.ant-btn-background-ghost .anticon {
    color: @secondary-color;
  }
  &.ant-btn-primary .anticon {
    color: @white;
  }
}

.ant-btn.ant-btn-link.no-padding {
  display: flex;
  margin: 0;
  padding: 0;
  line-height: normal;
  height: auto;
  align-items: center;
}

.ant-row.btn-wrapper {
  .ant-col:first-child {
    margin-bottom: 12px;
    @media @desktop {
      margin-bottom: 0;
    }
  }
}

// Basic Tags
.ant-tag {
  &.base-tag {
    margin: 0 3px 3px 0;
    padding: 1px 6px;
    border-radius: 4px;
    font-size: 13px;
    height: 22px;
    .font-semi();
    &.lila {
      .tag-color(@lila);
    }
    &.blue {
      .tag-color(@blue);
    }
    &.green {
      .tag-color(@green);
    }
    &.orange {
      .tag-color(@orange);
    }
  }
}

// Basic drawer
.ant-drawer.drawer-md {
  // se width
  .ant-drawer-content-wrapper {
    width: 100% !important;
    @media @desktop {
      width: @default-drawer-width !important;
    }
  }

  @back-btn-space: 6px;

  .ant-drawer-content {
    .ant-drawer-header {
      background: @white;
      border-radius: 0;
      padding-left: @default-section-padding - @back-btn-space;
    }
    .ant-drawer-body {
      padding: @default-section-padding;
      color: var(--text-color);
      background: @white;
      @media @desktop {
        padding: 40px 60px;
      }
    }
  }

  // on inline menu there is
  // a default caret icon
  .ant-menu-submenu-inline {
    .submenu-icon {
      display: none;
    }
  }
  .ant-menu-submenu-title {
    padding-left: 0 !important;
  }

  .back-btn-wrapper {
    background: @white;
    border-radius: 50%;
    padding: 12px;
    margin: @back-btn-space;
    box-shadow: @box-shadow-base;
    .anticon {
      color: @black;
    }
  }
}

// Popover
.ant-popover.popover-md {
  max-width: 360px;
  font-size: @font-size-sm;
}

.ant-popover.popover-sm {
  max-width: 300px;
  font-size: @font-size-sm;
}

// Basic form styles
.ant-input-group.ant-input-group-compact {
  > *:last-child {
    border-top-right-radius: @border-radius-base;
    border-bottom-right-radius: @border-radius-base;
  }
}

.ant-form-vertical .ant-form-item-label > label {
  font-size: @font-size-sm;
}

.dynamic-form.ant-form {
  > .ant-form-item {
    margin-bottom: 0;
    > .ant-form-item-control {
      margin-bottom: 16px;
      > .ant-form-item-control-input {
        .ant-form-item-control-input-content {
          display: flex;
          > .ant-form-item {
            flex: 1;
            margin-bottom: 0;
          }
          .ant-input-group-addon {
            background: @secondary-color;
            border-color: @secondary-color;
            color: @white;
          }
          > .anticon {
            width: 60px;
            display: flex;
            align-items: center;
            justify-content: center;
            color: @secondary-color;
          }
        }
      }
    }
  }
}

label.ant-radio-wrapper {
  .ant-radio {
    top: 0.05em;
  }
}

label.ant-radio-wrapper {
  color: @white;
}

.form-group {
  padding: 0 3px;
  .form-group-inner {
    .ant-form-item-label {
      label {
        font-size: @font-size-sm;
      }
    }
    .ant-checkbox-wrapper {
      font-size: @font-size-sm;
      .ant-checkbox {
        .ant-checkbox-inner {
          border-radius: 3px;
          width: 20px;
          height: 20px;
          &::after {
            width: 6px;
            height: 11px;
          }
        }
      }
    }
    .ant-form-item {
      margin-bottom: 16px;
    }
    .ant-tabs-nav {
      margin: 20px 0 30px;
    }
    .form-group-description {
      margin: 10px 0 15px;
      .default-text();
    }
    .form-group-label {
      .font-semi();
      font-size: 24px;
      margin: 10px 0 15px;
    }
  }
}

// Basic lists
.ant-list .multi-select-list-item {
  &.is-selected {
    .ant-card {
      background-color: #fef5fa;
      color: @white;
      border: 2px solid @secondary-color;
    }
  }
}

.ant-list.simple-list {
  .ant-list-item {
    .ant-list-item-meta-content {
      .ant-list-item-meta-description {
        color: var(--text-color);
      }
    }
  }
  &.equal-height {
    .ant-row > div {
      display: flex;
      margin-bottom: 20px;
      .ant-col,
      .ant-list-item,
      .ant-card {
        height: 100%;
      }
    }
  }
  &.white {
    .ant-list-item-meta-avatar {
      color: @secondary-color;
    }
    .ant-list-item {
      border-color: fade(@white, 10%);
    }
    .ant-list-item-meta-content {
      .ant-list-item-meta-description {
        color: fade(@white, 75%);
      }
    }
  }
}

// Other styles

.confetti-wrapper {
  height: 100%;
  left: 0;
  pointer-events: none;
  position: fixed;
  right: 0;
  top: 0;
  z-index: 1;
}

.mt-30 {
  margin-top: 30px;
}

.mb-30 {
  margin-bottom: 30px;
}

.slick-slider.custom-slider {
  @arrow-size: 44px;
  .slick-next,
  .slick-prev {
    z-index: 100;
    width: @arrow-size;
    height: @arrow-size;
    margin-top: calc(-@arrow-size / 2);
    .ant-btn {
      box-shadow: @box-shadow-base;
    }
    &.slick-disabled {
      opacity: 0;
    }
  }
  .slick-next {
    right: 50px;
  }
  .slick-prev {
    left: 50px;
  }
  .slick-arrow-btn.slick-arrow {
    display: flex;
    align-items: center;
    justify-self: center;
  }
}

.ant-input-group.equal-height {
  > .ant-select {
    height: @input-height-base;
  }
  > input.ant-input {
    height: @input-height-base;
  }
}

// Collapse
.ant-collapse.collapse-basic {
  background-color: transparent;
  > .ant-collapse-item > .ant-collapse-header {
    padding-left: 0;
  }
}

// Section blocks for landingpages
section.section-block {
  padding: 50px 0;
  @media @desktop {
    padding: 140px @default-section-padding;
  }
  .apply-color-scheme();
  // for the 4 background colors, we use  white text
  &.color-1,
  &.color-2,
  &.color-3,
  &.color-4 {
    .content {
      color: @white;
      h1,
      p {
        color: @white;
      }
    }
  }
}

